@startuml
hide empty members
hide empty methods

abstract class Modifier {
  challenge: Challenge

  Modifier(challenge: Challenge)
  onChallengeStarted()
  onPlayerJoin(player: Player)
}

class SharedHealthModifier

class TimedModifier

class Challenge {
  players: ArrayList<Player>
  creatorUUID: UUID
  state: ChallengeState
  world: MultiverseWorld
  modifiers: ArrayList<Modifier>
}

enum ChallengeState {
  PREPARING
  READY
  ONGOING
}

class Player

class ChallengeManager

Modifier <|-- SharedHealthModifier
Modifier <|-- TimedModifier
Challenge *-- Modifier
Modifier --up> Challenge

Challenge o-right- Player
Challenge --left-> ChallengeState

ChallengeManager *-- Challenge
@enduml